@@ -7,13 +7,13 @@
     <include package="ftw.theming" file="meta.zcml" />
 
     <theme:resources profile="ftw.subsite:default" slot="addon">
-        <theme:scss file="browser/ressources/integration.theme.scss" />
+        <theme:scss file="browser/resources/integration.theme.scss" />
     </theme:resources>
 
     <configure zcml:condition="installed ftw.mobile">
         <theme:resources profile="ftw.subsite:default" slot="addon"
                          layer="ftw.mobile.interfaces.IMobileLayer">
-            <theme:scss file="browser/ressources/integration.ftw-mobile.theme.scss"
+            <theme:scss file="browser/resources/integration.ftw-mobile.theme.scss"
                         after="ftw.mobile:scss/mobile-menu-buttons.scss" />
         </theme:resources>
     </configure>
